--- a/.github/workflows/wk.yml
+++ b/.github/workflows/wk.yml
@@ -18,5 +18,5 @@ jobs:
           uses: Azure/pipelines@v1
           with:
             azure-devops-project-url: https://dev.azure.com/sudheerkhanduri/testing
-            azure-pipeline-name: 'My Pipeline'
+            azure-pipeline-name: sudheerkhanduri.Elegant_Calculator
             azure-devops-token: ${{ secrets.AzureDevOpsPat }}
